--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "chaibackend",
   "version": "1.0.0",
-  "type": "module",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js"
   },
@@ -15,5 +15,13 @@
   "devDependencies": {
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2"
+  },
+  "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "expre": "^0.1.1",
+    "express": "^4.21.2",
+    "mongoose": "^8.9.6"
   }
 }
