--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "prettier": "^3.4.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "expre": "^0.1.1",
     "express": "^4.21.2",
-    "mongoose": "^8.9.6"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.6",
+    "mongoose-aggregate-paginate-v2": "^1.1.4"
   }
 }
